fix: navbar alignment - ms-auto for right-aligned nav, ms-4 for brand padding; remove orphan empty link

--- a/src/app/timeline/timeline.component.scss
+++ b/src/app/timeline/timeline.component.scss
@@ -7,14 +7,6 @@ p {
   background: none;
 }
 
-.mat-mdc-card-header {
-  padding: 0;
-}
-
-.mat-mdc-card-content {
-  padding: 0 0 0 56px;
-}
-
 @media (max-width: 768px) {
   p {
     font-size: 4vw;
